--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,4 @@ Week1/pawnscape/mdp.json filter=lfs diff=lfs merge=lfs -text
 Week1/pawnscape/white-mdp-5x5.json filter=lfs diff=lfs merge=lfs -text
 Week1/pawnscape/white-mdp.json filter=lfs diff=lfs merge=lfs -text
 Week1/pawnscape/black-mdp-5x5.json filter=lfs diff=lfs merge=lfs -text
+Week3/lichess_db_puzzle.csv filter=lfs diff=lfs merge=lfs -text
